k8s/3-tier-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: company-app
  labels:
    name: company-app
