k8s/3-tier-app/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: company-app
spec:
  selector:
    app: backend
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: company-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: my_app-company-backend:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000
